--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           "Marquis",
           "Monarch",
           "Noble",
-          "Nobleman",
           "Overlord",
           "Parliamentarian",
           "Patrician",
@@ -83,18 +82,17 @@
           "want",
           "need",
           "wish",
-          "appetite",
-          "craving",
+          "have an appetite",
+          "have a craving",
           "demand",
-          "fancy",
-          "hankering",
+          "fancy anything",
+          "have a hankering",
           "hunger",
-          "longing",
-          "necessity",
-          "requirement",
+          "have any longing",
+          "have any necessity",
+          "require",
           "thirst",
-          "yearning",
-          "yen"
+          "yearn"
         ],
         "lay down": [
           "lay down",
@@ -163,13 +161,12 @@
         ],
         pastures: [
           "pastures",
-          "grass",
-          "grazing",
+          "grasses",
+          "grounds",
           "meadow",
-          "feeding",
           "herbage",
-          "lea",
-          "range"
+          "leas",
+          "ranges"
         ],
         leads: [
           "leads",
@@ -201,7 +198,6 @@
           "routes",
           "safeguards",
           "shepherds",
-          "spans",
           "squires",
           "steers",
           "traverses",
@@ -606,12 +602,12 @@
           "start",
           "tremble",
           "wilt",
-          "be afraid of",
-          "be anxious of",
-          "be apprehensive of",
-          "be disquieted at",
-          "be frightened of",
-          "be in awe of",
+          "am afraid of",
+          "am anxious of",
+          "am apprehensive of",
+          "am disquieted at",
+          "am frightened of",
+          "am in awe of",
           "break out in a sweat from",
           "feel concerned with ",
           "have butterflies at",
@@ -832,7 +828,6 @@
           "stand",
           "bureau",
           "console",
-          "dresser",
           "lectern",
           "pulpit",
           "sideboard",
@@ -853,7 +848,6 @@
           "omnipresence",
           "potentiality",
           "residence",
-          "subsistence",
           "ubiety",
           "ubiquity",
           "whereabouts",
@@ -900,27 +894,18 @@
         ],
         anointed: [
           "anointed",
-          "bless",
-          "consecrate",
-          "daub",
-          "embrocate",
-          "grease",
-          "hallow",
-          "rub",
-          "sanctify",
-          "smear"
+          "blessed",
+          "consecrated",
+          "daubed",
+          "embrocated",
+          "greased",
+          "hallowed",
+          "rubbed",
+          "sanctified",
+          "smeared"
         ],
         head: ["head"],
-        oil: [
-          "oil",
-          "coat",
-          "grease",
-          "lard",
-          "lube",
-          "pomade",
-          "slick",
-          "smear"
-        ],
+        oil: ["oil", "coat", "grease", "lard", "pomade", "slick", "smear"],
         cup: [
           "cup",
           "bowl",
@@ -948,21 +933,16 @@
           "overabundances",
           "torrents",
           "Niagaras",
-          "advances",
           "cataclysms",
           "cataracts",
-          "congestions",
-          "discharges",
-          "encroaches",
           "exceeds",
           "floods",
-          "overcrowdes",
-          "pours",
-          "pushes",
-          "spills",
+          "overcrowds",
+          "pours over",
+          "pushes over",
           "spills over",
           "submerges",
-          "surpluses"
+          "has a surplus"
         ],
         goodness: [
           "goodness",
