more noun updates

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           "pastures",
           "grasses",
           "grounds",
-          "meadow",
+          "meadows",
           "herbage",
           "leas",
           "ranges"
@@ -205,10 +205,8 @@
           "is responsible for",
           "finds a way",
           "goes along with",
-          "passes along",
-          "points out",
-          "points the way",
-          "shows the way",
+          "points the way to",
+          "shows the way to",
           "watches over"
         ],
         beside: ["beside"],
@@ -1032,7 +1030,7 @@
           "ensue",
           "postdate",
           "replace",
-          "result",
+          "result in",
           "succeed",
           "supersede",
           "supervene",
@@ -1133,7 +1131,7 @@
           "tenant",
           "tent",
           "establish oneself",
-          "hang one's hat",
+          "hang my hat",
           "hang out",
           "keep house",
           "make one's home",
